Update arXiv link for preprint reference

--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
         </br>
         with Blazej Ruba
         </br>
-        preprint (2025), [<a href="" target="_blank" rel="noopener">arXiv:2509.</a>]
+        preprint (2025), [<a href="https://arxiv.org/abs/2509.10418" target="_blank" rel="noopener">arXiv:2509.10418</a>]
       </li>
       <li>
         <strong>Clifford quantum cellular automata from topological quantum field theories and invertible subalgebras</strong>
