--- a/cv.html
+++ b/cv.html
@@ -22,15 +22,15 @@
 
   <main id="main" class="container">
     <h1>Curriculum Vitae</h1>
-    <!-- <p>Download a PDF copy of my CV or view it inline below.</p>
+    <p>Download a PDF copy of my CV or view it inline below.</p>
     <p>
-      <a class="btn" href="assets/cv.pdf" download>Download CV (PDF)</a>
+      <a class="btn" href="assets/pdf/Bowen_Yang_CV.pdf" download>Download CV (PDF)</a>
       <span class="dot">•</span>
-      <a class="btn ghost" href="assets/cv.pdf" target="_blank" rel="noopener">Open in new tab</a>
+      <a class="btn ghost" href="assets/pdf/Bowen_Yang_CV.pdf" target="_blank" rel="noopener">Open in new tab</a>
     </p>
     <object data="assets/cv.pdf" type="application/pdf" width="100%" height="800" aria-label="CV PDF">
       <p>Your browser cannot display PDFs. <a href="assets/cv.pdf">Download the CV</a> instead.</p>
-    </object> -->
+    </object>
   </main>
   
 <!-- <footer>
