Update PDF link in cv.html to point to correct file

--- a/cv.html
+++ b/cv.html
@@ -28,8 +28,8 @@
       <span class="dot">•</span>
       <a class="btn ghost" href="assets/pdf/Bowen_Yang_CV.pdf" target="_blank" rel="noopener">Open in new tab</a>
     </p>
-    <object data="assets/cv.pdf" type="application/pdf" width="100%" height="800" aria-label="CV PDF">
-      <p>Your browser cannot display PDFs. <a href="assets/cv.pdf">Download the CV</a> instead.</p>
+    <object data="assets/pdf/Bowen_Yang_CV.pdf" type="application/pdf" width="100%" height="800" aria-label="CV PDF">
+      <p>Your browser cannot display PDFs. <a href="assets/pdf/Bowen_Yang_CV.pdf">Download the CV</a> instead.</p>
     </object>
   </main>
   
