Add new paper on symmetry protected topological phases

--- a/research.html
+++ b/research.html
@@ -26,6 +26,13 @@
     <h2>Papers / Preprints</h2>
     <ol>
       <li>
+        <strong>Transition between 2D Symmetry Protected Topological Phases on a Klein Bottle</strong>
+        </br>
+        with Vibhu Ravindran, Xie Chen
+        </br>
+        preprint (2025), [<a href="https://arxiv.org/abs/2510.00587" target="_blank" rel="noopener">arXiv:2510.00587</a>]
+      </li>
+      <li>
         <strong>Witt Groups and Bulk-Boundary Correspondence for Stabilizer States</strong>
         </br>
         with Blazej Ruba
