Update research interests in index.html
Revised personal research description for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Postdoctoral Fellow in Mathematical Physics, Harvard University</p>
       <p class="kicker" id="hero-text">Quantum many‑body systems, topological phases of matter, and algebraic methods in quantum information.</p>
 
-      I am interested in uncovering algebraic and topological structures inspired by quantum many-body systems. My work spans bulk-boundary correspondences and the structure of quantum cellular automata and stabilizer codes. More recently, I have been exploring connections to algebraic surgery theory.
+      I am uncovering new algebraic and topological structures inspired by quantum many-body systems. I like to think of my research as studying quantum states in the same way an algebraic topologist studies spaces. My work has shed light on bulk–boundary correspondence, the classification of quantum cellular automata, and the phases of stabilizer codes. More recently, I have been investigating connections with algebraic surgery theory.
       <!-- <div class="cards">
         <a class="card" href="research.html">
           <h3>Research</h3>
