Add acknowledgment section in index.html
Add a section acknowledging contributions to the template.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       </ul>
       <!-- <ul id="contact-list" class="inline-list"></ul> -->
     </section>
+
+    <section>
+      <small>ChatGPT made the template. My wife made it real. Only one of them is artificial.</small>
+    </section>
   </main>
   
 <!-- <footer>
