--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- <ul id="contact-list" class="inline-list"></ul> -->
     </section>
 
-    <section>
+    <section class="credits">
       <small>ChatGPT made the template. My wife made it real. Only one of them is artificial.</small>
     </section>
   </main>
