Revise research section with new papers and details
Updated research papers and preprints with new titles, authors, and links. Added new sections and reorganized existing content.

--- a/research.html
+++ b/research.html
@@ -21,42 +21,14 @@
 <a href="#main" class="visually-hidden">Skip to content</a>
 
   <main id="main" class="container">
-    <h1>Research</h1>
-
-    <h2>Papers / Preprints</h2>
+   <h2>Algebraic Theory of Stabilizer Codes</h2>
     <ol>
-      <li>
-        <strong>Transition between 2D Symmetry Protected Topological Phases on a Klein Bottle</strong>
-        </br>
-        with Vibhu Ravindran, Xie Chen
-        </br>
-        preprint (2025), [<a href="https://arxiv.org/abs/2510.00587" target="_blank" rel="noopener">arXiv:2510.00587</a>]
-      </li>
-      <li>
+       <li>
         <strong>Witt Groups and Bulk-Boundary Correspondence for Stabilizer States</strong>
         </br>
         with Blazej Ruba
         </br>
         preprint (2025), [<a href="https://arxiv.org/abs/2509.10418" target="_blank" rel="noopener">arXiv:2509.10418</a>]
-      </li>
-      <li>
-        <strong>Clifford quantum cellular automata from topological quantum field theories and invertible subalgebras</strong>
-        </br>
-        with Meng Sun, Zongyuan Wang, Nathanan Tantivasadakarn, Yu-An Chen
-        </br>
-        preprint (2025), [<a href="https://arxiv.org/abs/2509.07099" target="_blank" rel="noopener">arXiv:2509.07099</a>]
-      </li>
-      <li>
-        <strong>Categorifying Clifford QCA</strong>
-        </br>
-        preprint (2025), [<a href="https://arxiv.org/abs/2504.14811" target="_blank" rel="noopener">arXiv:2504.14811</a>]
-      </li>
-      <li>
-        <strong>A mathematical theory of topological invariants of quantum spin systems</strong>
-        </br>
-        with Adam Artymowicz, Anton Kapustin
-        </br>
-        preprint (2024), [<a href="https://arxiv.org/abs/2410.19287" target="_blank" rel="noopener">arXiv:2410.19287</a>]
       </li>
       <li>
         <strong>Operator algebra and algorithmic construction of boundaries and defects in (2+ 1) D topological Pauli stabilizer codes</strong>
@@ -72,6 +44,38 @@
         </br>
         <em>Communications in Mathematical Physics</em> (2024), [<a href="https://link.springer.com/article/10.1007/s00220-024-04991-y" target="_blank" rel="noopener">journal</a> | <a href="https://arxiv.org/abs/2204.06023" target="_blank" rel="noopener">	arXiv:2204.06023</a>]
       </li>
+    </ol>
+   <h2>Quantum Cellular Automata and Generalized Homology Theories</h2>
+    <ol>
+      <li>
+        <strong>Clifford quantum cellular automata from topological quantum field theories and invertible subalgebras</strong>
+        </br>
+        with Meng Sun, Zongyuan Wang, Nathanan Tantivasadakarn, Yu-An Chen
+        </br>
+        preprint (2025), [<a href="https://arxiv.org/abs/2509.07099" target="_blank" rel="noopener">arXiv:2509.07099</a>]
+      </li>
+      <li>
+        <strong>Categorifying Clifford QCA</strong>
+        </br>
+        preprint (2025), [<a href="https://arxiv.org/abs/2504.14811" target="_blank" rel="noopener">arXiv:2504.14811</a>]
+      </li>
+    </ol>
+    <h2>Quantum Spin Systems and Phases of Matter</h2>
+    <ol>
+      <li>
+        <strong>Transition between 2D Symmetry Protected Topological Phases on a Klein Bottle</strong>
+        </br>
+        with Vibhu Ravindran, Xie Chen
+        </br>
+        preprint (2025), [<a href="https://arxiv.org/abs/2510.00587" target="_blank" rel="noopener">arXiv:2510.00587</a>]
+      </li>
+      <li>
+        <strong>A mathematical theory of topological invariants of quantum spin systems</strong>
+        </br>
+        with Adam Artymowicz, Anton Kapustin
+        </br>
+        preprint (2024), [<a href="https://arxiv.org/abs/2410.19287" target="_blank" rel="noopener">arXiv:2410.19287</a>]
+      </li>
       <li>
         <strong>Spatial decay of Kubo’s canonical correlation functions</strong>
         </br>
@@ -84,6 +88,9 @@
         </br>
         <em>Journal of Mathematical Physics</em> (2021), [<a href="https://pubs.aip.org/aip/jmp/article-abstract/62/8/081901/397970/A-classification-of-invertible-phases-of-bosonic" target="_blank" rel="noopener">journal</a> | <a href="https://arxiv.org/abs/2012.15491" target="_blank" rel="noopener">	arXiv:2012.15491</a>]
       </li>
+    </ol>
+    <h2>Earlier Work</h2>
+    <ol>
       <li>
         <strong>Toy Teichmüller spaces of real dimension 2: the pentagon and the punctured triangle</strong>
         </br>
@@ -99,7 +106,6 @@
         <em>Journal of Number Theory</em> (2017), [<a href="https://www.sciencedirect.com/science/article/pii/S0022314X16301561" target="_blank" rel="noopener">journal</a>]
       </li>
     </ol>
-
     <h2>PhD Thesis</h2>
     <strong>Quantum States: With a View Toward Homological Algebra</strong>
     </br>
