Add preprint reference for Quantum Cellular Automata

--- a/research.html
+++ b/research.html
@@ -47,6 +47,13 @@
     </ol>
    <h2>Quantum Cellular Automata and Generalized Homology Theories</h2>
     <ol>
+     <li>
+        <strong>Quantum Cellular Automata: The Group, the Space, and the Spectrum</strong>
+        </br>
+        with Mattie Ji
+        </br>
+        preprint (2026), [<a href="https://arxiv.org/abs/2602.16572" target="_blank" rel="noopener">arXiv:2602.16572</a>]
+      </li>
       <li>
         <strong>Clifford quantum cellular automata from topological quantum field theories and invertible subalgebras</strong>
         </br>
