Update publication details for research paper

--- a/research.html
+++ b/research.html
@@ -64,7 +64,7 @@
       <li>
         <strong>Categorifying Clifford QCA</strong>
         </br>
-        preprint (2025), [<a href="https://arxiv.org/abs/2504.14811" target="_blank" rel="noopener">arXiv:2504.14811</a>]
+        to appear <em>Communications in Mathematical Physics</em> (2026), [<a href="https://arxiv.org/abs/2504.14811" target="_blank" rel="noopener">arXiv:2504.14811</a>]
       </li>
     </ol>
     <h2>Quantum Spin Systems and Phases of Matter</h2>
