Add teaching details for Harvard University

--- a/teaching.html
+++ b/teaching.html
@@ -22,6 +22,10 @@
 
   <main id="main" class="container">
     <h1>Teaching</h1>
+    <h2>Instructor, Harvard University</h2>
+    <ul>
+      <li>Math 21B - Linear Algebra and Ordinary Differential Equations, Spring 2026.</li>
+    </ul>
     <h2>Instructor, California Institute of Technology</h2>
     <ul>
       <li>Math 8 - Calculus for Problem Solving, Fall 2021.</li>
