Update publication details in research.html

--- a/research.html
+++ b/research.html
@@ -59,12 +59,12 @@
         </br>
         with Meng Sun, Zongyuan Wang, Nathanan Tantivasadakarn, Yu-An Chen
         </br>
-        preprint (2025), [<a href="https://arxiv.org/abs/2509.07099" target="_blank" rel="noopener">arXiv:2509.07099</a>]
+        to appear in <em>PRX Quantum</em> (2026), [<a href="https://arxiv.org/abs/2509.07099" target="_blank" rel="noopener">arXiv:2509.07099</a>]
       </li>
       <li>
         <strong>Categorifying Clifford QCA</strong>
         </br>
-        to appear <em>Communications in Mathematical Physics</em> (2026), [<a href="https://arxiv.org/abs/2504.14811" target="_blank" rel="noopener">arXiv:2504.14811</a>]
+        to appear in <em>Communications in Mathematical Physics</em> (2026), [<a href="https://arxiv.org/abs/2504.14811" target="_blank" rel="noopener">arXiv:2504.14811</a>]
       </li>
     </ol>
     <h2>Quantum Spin Systems and Phases of Matter</h2>
