Update teaching roles and course listings

--- a/teaching.html
+++ b/teaching.html
@@ -45,19 +45,14 @@
       <li>Math 120a - Commutative algebra, Fall 2022.</li>
     </ul>
 
-    <h2>Teaching fellow, Amherst College</h2>
-    <ul>
-      <li>Math 355 - Introduction to Analysis, Fall 2017.</li>
-      <li>Math 350 - Groups, Rings, and Fields, Spring 2018.</li>
-    </ul>
-
-    <h2>Course assistant, Amherst College</h2>
+    <h2>Course assistant/ Math fellow, Amherst College</h2>
     <ul>
       <li>CS 101 - Python, Spring 2015.</li>
       <li>CS 121 - Java, Fall 2015.</li>
       <li>Math 350 - Groups, Rings, and Fields, Fall 2015.</li>
       <li>Math 450 - Measure Theory and Integration, Spring 2016.</li>
       <li>Math 405 - Lie Algebras, Fall 2017.</li>
+      <li>Math 355 - Introduction to Analysis, Fall 2017.</li>
     </ul>
 
     <h2>Counselor at the Ross Mathematics Program</h2>
