--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
 <a href="#main" class="visually-hidden">Skip to content</a>
 
   <main id="main" class="container">
-    <section class="hero">
+    <section>
       <h1>Bowen Yang</h1>
       <p>Postdoctoral Fellow in Mathematical Physics, Harvard University</p>
-      <p class="kicker" id="hero-text">Quantum many‑body systems, topological phases of matter, and algebraic methods in quantum information.</p>
-<p>
-  
-
-I am a postdoctoral fellow at Harvard University and a member of the Center of Mathematical Sciences and Applications, working with Dan Freed. I am affiliated with the Department of Mathematics, where I teach. I work closely with Michael Hopkins in the Department of Mathematics on problems at the interface of topology and physics, and I co-organize the CMSA <a href="https://cmsa.fas.harvard.edu/events-archive/category/colloquia-seminar/freedman/">Freedman Seminar</a> with Michael Freedman. I received my Ph.D. in Mathematics from the California Institute of Technology in 2023 under the supervision of Anton Kapustin.
-</p>    
-</br>
-    </br>
+      <div class="hero">
+        <p class="kicker" id="hero-text">Quantum many‑body systems, topological phases of matter, and algebraic methods in quantum information.</p>
+      </div>
+      <p>
+      I am a postdoctoral fellow at Harvard University and a member of the Center of Mathematical Sciences and Applications, working with Dan Freed. I am affiliated with the Department of Mathematics, where I teach. I work closely with Michael Hopkins in the Department of Mathematics on problems at the interface of topology and physics, and I co-organize the CMSA <a href="https://cmsa.fas.harvard.edu/events-archive/category/colloquia-seminar/freedman/">Freedman Seminar</a> with Michael Freedman. I received my Ph.D. in Mathematics from the California Institute of Technology in 2023 under the supervision of Anton Kapustin.
+      </p>    
+      <p>
       My research develops algebraic and homotopical methods in quantum many-body systems. I like to think of my work as studying quantum states in much the same way that an algebraic topologist studies spaces. Drawing on commutative algebra and stable homotopy theory, I investigate exactly solvable lattice models, quantum cellular automata, and topological phases of matter.
-    </br>
-    </br>
-      I am particularly interested in the interplay between pure and applied mathematics, especially in situations where abstract methods illuminate concrete problems from physics. This perspective has led to new insights into bulk–boundary correspondence, classification problems for quantum cellular automata, and the structure of quantum error-correcting codes.      <!-- <div class="cards">
+      </p>
+      <p>
+      I am particularly interested in the interplay between pure and applied mathematics, especially in situations where abstract methods illuminate concrete problems from physics. This perspective has led to new insights into bulk–boundary correspondence, classification problems for quantum cellular automata, and the structure of quantum error-correcting codes.      
+      </p>
+  <!-- <div class="cards">
         <a class="card" href="research.html">
           <h3>Research</h3>
           <p>Quantum many-body systems, topological phases of, Clifford QCA, stabilizer codes.</p>
